<resources>
    <string name="app_name">darshanBeta</string>
    <string name="hint_enter_username">Username</string>
    <string name="hint_enter_email">Email</string>
    <string name="btn_register">Register</string>
    <string name="hint_login">Login</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="lable_start">start</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_name">Name:</string>
    <string name="label_id">ID:</string>
    <string name="label_section_no">Section no:</string>
    <string name="label_login">Login</string>
    <string name="label_registration">Registration</string>
    <string name="label_enter_phone_number">Phone number</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_enter_password">Enter password</string>
    <string name="label_scan">scan</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="label_product">Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_hello">hello</string>
    <string name="label_print">Print</string>
    <string name="label_customer">Customer</string>
</resources>
